# soliton_engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  WinRes.rc  gen_docs.sh  gen_lua_docs.sh  osx_vk_cfg.sh  remote_explorer.sh  run_dev.bat  run_dev.sh  run_prod.bat  run_rel.bat  run_rel.sh  setup_lua_docs_packages.sh  setup_packages_linux.sh  vk_check.sh  vkvia.html
src/: CMakeLists.txt  boot.cpp  boot.cpp~  core.cpp  core.hpp  graphics.cpp  graphics.hpp  platform.hpp  src.generated.sln  src.sln
src/assetmgr/: asset.cpp  asset.hpp  asset_accessor.cpp  asset_accessor.hpp  asset_registry.hpp  assetmgr.cpp  assetmgr.hpp  simdutf.cpp  simdutf.h  stream.cpp  stream.hpp
src/audio/: audio_clip.cpp  audio_clip.hpp  audio_subsystem.cpp  audio_subsystem.hpp
src/boot/: boot.cpp
src/core/: boot.cpp  buffered_sink.cpp  buffered_sink.hpp  core.cpp  core.hpp  crc32-pclmul-ref.S  crc32.cpp  crc32.hpp  delegate.hpp  eastl_alloc.cpp  exit_guard.hpp  fixed_ring_scalar_buffer.hpp  fs_watchdog.cpp  fs_watchdog.hpp  hash.hpp  kernel.cpp  kernel.hpp  lazy.hpp  lazy_flex.hpp  move_copy_base.hpp  obfuscated.hpp  platform.hpp  profiler.hpp  specializations.hpp  splash_screen.cpp  splash_screen.hpp  spsc_queue.hpp  stopwatch.hpp  subsystem.hpp  system_variable.cpp  system_variable.hpp  thread_signal.hpp  utils.hpp
src/ecs/: flecs.h
src/freetype/: CMakeLists.txt
src/glfw/: CMakeLists.txt
src/gltf/: tiny_gltf.h
src/graphics/: async_gpu_uploader.cpp  async_gpu_uploader.hpp  debugdraw.cpp  debugdraw.hpp  draw_partition.hpp  file_includer.cpp  file_includer.hpp  foundation.hpp  graphics.cpp  graphics.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  graphics_subsystem.cpp  graphics_subsystem.cpp~  graphics_subsystem.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_utils.hpp  pbr.cpp  pbr.hpp  pbr_filter_processor.cpp  pbr_filter_processor.hpp  pbr_utils.cpp  pbr_utils.hpp  pipeline.cpp  pipeline.hpp  pipeline_base.cpp  pipeline_base.hpp  pipeline_cache.cpp  pipeline_cache.hpp  prelude.cpp  prelude.hpp  render_thread_pool.cpp  render_thread_pool.hpp  shader.cpp  shader.hpp  shader_compiler.cpp  shader_compiler.hpp  (+12 more)
src/math/: DirectXMathVector.inl  DirectXMatrixStack.h
src/meshio/: CMakeLists.txt
src/physics/: broad_phase_layer.cpp  broad_phase_layer.hpp  broad_phase_layer_filter.cpp  broad_phase_layer_filter.hpp  collider.cpp  collider.hpp  contact_listener.cpp  contact_listener.hpp  debug_renderer.cpp  debug_renderer.hpp  layerdef.hpp  object_layer_filter.cpp  object_layer_filter.hpp  physics_subsystem.cpp  physics_subsystem.hpp
src/platform/: backend.cpp  backend.hpp  machine_info.cpp  machine_info.hpp  platform_subsystem.cpp  platform_subsystem.hpp  subsystem.cpp  subsystem.hpp  window.cpp  window.hpp
src/sal/: sal.h
(+6211 files in other folders)
